Adjust top positioning of .tm-board-horizontal for slight alignment correction

--- a/src/Banner.css
+++ b/src/Banner.css
@@ -246,7 +246,7 @@ position: absolute;
   } */
 
   .tm-board-horizontal {
-                  top: 69px;
+                  top: 71px;
         /* width: 35vw; */
 
 
